ispravljanje greški, uklanjanja dupliciranja podataka u bazi nakon svakog poziva apia

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=backend
-spring.datasource.url=jdbc:h2:file:./data/exchange-db
+spring.datasource.url=jdbc:h2:file:./data/intellexi
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
+spring.datasource.username=intellexi
 spring.datasource.password=
 spring.sql.init.platform=h2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
