--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -4,7 +4,7 @@ services:
   backend:
     build:
       context: ./backend
-    container_name: intellexi-backend
+    container_name: backend
     ports:
       - "8080:8080"
 
@@ -14,7 +14,7 @@ services:
   frontend:
     build:
       context: ./frontend
-    container_name: intellexi-frontend
+    container_name: frontend
     ports:
       - "5173:5173"
     volumes:
