--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: "3.9"
 
 services:
   backend:
@@ -7,20 +6,24 @@ services:
     container_name: backend
     ports:
       - "8080:8080"
-
     environment:
       - SPRING_PROFILES_ACTIVE=dev
 
   frontend:
     build:
       context: ./frontend
+      dockerfile: Dockerfile
     container_name: frontend
     ports:
       - "5173:5173"
     volumes:
       - ./frontend:/app
-      - /app/node_modules # spriječi probleme s lokalnim node_modules
+      - frontend_node_modules:/app/node_modules
     stdin_open: true
     tty: true
     depends_on:
       - backend
+  
+volumes:
+  frontend_node_modules:
+      
