--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,9 +1,8 @@
-
-FROM node:18
+FROM node:20
 WORKDIR /app
 COPY package*.json ./
-RUN npm install
-RUN chmod +x node_modules/.bin/*
+RUN npm ci && chmod -R +x node_modules/.bin
 COPY . .
 EXPOSE 5173
 CMD ["npm", "run", "dev", "--", "--host"]
+
